<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">It\'s empty here.</string>
    <string name="empty_view_subtitle_text">Start by adding some products.</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="dummyPictureUri">android.resource://com.example.android.inventoryapp/drawable/dummy_product</string>
    <string name="dummyDataSupplierName">Samsung</string>
    <string name="dummyDataSupplierEmail">samsung@samsung.com</string>
    <string name="buyButton">Buy</string>
    <string name="buy_out_of_stock">Out of stock</string>
    <string name="clickToAddPicture">Click here to add Picture</string>
    <string name="hintName">Product name</string>
    <string name="hintPrice">Product price</string>
    <string name="hintSupplierName">Product supplier name</string>
    <string name="hintSupplierEmail">Product supplier e-mail</string>
    <string name="addAProduct">Add a product</string>
    <string name="editProduct">Edit product</string>
    <string name="selectPicture">Select picture</string>
    <string name="insertProductNameToast">Insert product name</string>
    <string name="insertPriceToast">Insert product price</string>
    <string name="insertSupplierNameToast">Insert supplier name</string>
    <string name="insertSupplierEmail">Insert supplier Email</string>
    <string name="editorInsertFailed">Product insert failed</string>
    <string name="editorInsertSUcc">Insert was successful</string>
    <string name="editUpdateFailed">Updating product failed</string>
    <string name="editUpdateProductSucc">Update product succeeded</string>
    <string name="discardChanges">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keepEditing">Keep editing</string>
    <string name="deleteThisProduct">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="errorDeletingProduct">Error with deleting product</string>
    <string name="productDeleted">Product deleted</string>
    <string name="orderMore">Order more</string>
    <string name="productPictureNotSet">Product picture is not set</string>
    <string name="quantityAlreadyZero">Quantity is already 0</string>
    <string name="productQuantityMain">Product quantity</string>
    <string name="productNameMain">Product name</string>
</resources>
